Fixing the spacing on part two

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -7,7 +7,6 @@
 	margin: 0;
 	justify-content: space-evenly;
 	justify-content: space-between;
-	justify-content: space-around;
 }
 
 /* end Flexbox Part 1 */
@@ -18,6 +17,8 @@
 #flex-section2 ul {
 display: flex;
 list-style: none;
+padding: 0;
+margin: 0;
 
 }
 
